<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">信鸽作品BTcar</string>
<string name="hello">Hello World, AccelerometerTest!</string>
	<string name="tip">二维平面xy轴:</string>
	<string name="search">搜索</string>
    <!--  BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙没开启，退出应用</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">连接到<xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">没有连接</string>

    <!--  DeviceListActivity -->
    <string name="scanning">扫描...</string>
    <string name="select_device">选择设备连接</string>
    <string name="none_paired">没有设备配对</string>
    <string name="none_found">没有找到</string>
    <string name="title_paired_devices">配对的设备</string>
    <string name="title_other_devices">其他可用设备</string>
    <string name="button_scan">扫描</string>
    
	<!-- colorPanel -->
    <string name="colorpanel">调色板</string>
    
    <!-- Options Menu -->
    <string name="secure_connect">连接</string>
    <string name="discoverable">可被附近蓝牙监测到</string>
    <string name="up">前</string>
    <string name="back">后</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="change_to_button_mode">按钮模式</string>
    <string name="change_to_acceler_mode">重力传感模式</string>
</resources>
